# peridot-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  PERIDOT_SPEC_v1.md  README.md  deny.toml  install.sh  rust-toolchain.toml
.cursor/rules/: peridot-agent.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  vscode-ci.yml  vscode-release.yml
.peridot/: config.toml
.peridot/hooks/: on-session-end.sh  on-verification-failed.sh  post-file-write-rust-check.sh  pre-git-commit-quality.sh  pre-shell-dangerous-command.sh
.peridot/skills/committee-orchestration/: SKILL.md
.peridot/skills/context-cache-invariants/: SKILL.md
.peridot/skills/crate-boundary-review/: SKILL.md
.peridot/skills/llm-provider-implementation/: SKILL.md
.peridot/skills/mock-llm-test-writer/: SKILL.md
.peridot/skills/multisession-orchestration/: SKILL.md
.peridot/skills/peridot-session-bootstrap/: SKILL.md
.peridot/skills/ratatui-tui-qa/: SKILL.md
.peridot/skills/release-ci-prep/: SKILL.md
.peridot/skills/rust-workspace-skeleton/: SKILL.md
.peridot/skills/tool-security-check/: SKILL.md
crates/peridot-agents/: Cargo.toml
crates/peridot-agents/src/: lib.rs
crates/peridot-cli/: Cargo.toml
crates/peridot-cli/src/: checkpoints.rs  commands.rs  context_limits.rs  curator.rs  harness_learn.rs  interactive_io.rs  main.rs  run_loop.rs  run_output.rs  run_state.rs  session_router.rs  tests.rs  tui_branch.rs  tui_codemap.rs  tui_notes.rs  tui_session_export.rs  tui_skill.rs  vision.rs  worktree_cleanup.rs
crates/peridot-cli/src/commands/: agents.rs  attach.rs  auth.rs  codemap.rs  config.rs  daemon.rs  doctor.rs  mcp.rs  output.rs  session.rs  settings.rs  settings_i18n.rs  setup.rs  ship.rs  skills.rs  tests.rs  update.rs  verify.rs
crates/peridot-cli/src/commands/daemon/: approval.rs  attach.rs  branch.rs  codemap.rs  command_help.rs  inspect.rs  mcp.rs  mod.rs  notes.rs  session_cmd.rs  skills.rs  tests.rs
crates/peridot-cli/tests/: e2e.rs
crates/peridot-common/: Cargo.toml
crates/peridot-common/src/: cancel.rs  lib.rs
crates/peridot-context/: Cargo.toml
crates/peridot-context/src/: compacted.rs  lib.rs  summarize.rs
crates/peridot-core/src/: agent.rs  agent_helpers.rs  approval.rs  checkpoint.rs  (+13 more)
crates/peridot-git/: Cargo.toml
crates/peridot-llm/: Cargo.toml
crates/peridot-mcp/: Cargo.toml
crates/peridot-mcp/src/: http.rs  lib.rs  protocol.rs  stdio.rs  tests.rs  types.rs
crates/peridot-memory/: Cargo.toml
crates/peridot-memory/src/: lib.rs
crates/peridot-symbols/: Cargo.toml
crates/peridot-symbols/src/: bash.rs  c_family.rs  csharp.rs  dart.rs  elixir.rs  elm.rs  go.rs  haskell.rs  java.rs  julia.rs  kotlin.rs  lib.rs  lua.rs  ocaml.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  typescript.rs  zig.rs
crates/peridot-tools/: Cargo.toml
crates/peridot-tools/src/: audit.rs  hooks.rs  lib.rs  mcp_adapter.rs  path.rs  registry.rs  sandbox.rs  tests.rs
crates/peridot-tools/src/tests/: registry_file_plan.rs  shell_agent_memory.rs  verify.rs
crates/peridot-tools/src/tools/: agent.rs  command.rs  file.rs  git.rs  mod.rs  plan.rs  shell.rs  skill.rs  symbol_cache.rs  verify.rs  web.rs
crates/peridot-verify/: Cargo.toml
crates/peridot-verify/src/: lib.rs
docs/: user-guide.md
docs/agents/: committee-runbook.md  implementation-playbook.md  multisession-runbook.md  rust-workspace-guidelines.md  security-and-permissions.md  skill-hook-maintenance.md  verification.md
docs/plans/: borderless_transcript.md  extension-roadmap-v0.6.md  extension-roadmap-v0.7.md  extension-roadmap-v0.8.md  extension-roadmap-v0.9.md  f2-multimodal-vision.md  f3-voice-input.md  f4-web-ui.md  roadmap-v1.0.md
extensions/vscode/: .gitignore  .gitkeep  .vscodeignore  CHANGELOG.md  README.md  esbuild.config.mjs  eslint.config.mjs  package-lock.json  package.json  package.nls.json  package.nls.ko.json  tsconfig.json  tsconfig.test.json  tsconfig.webview.json
peridot-agents/: Cargo.toml
peridot-agents/src/: lib.rs
peridot-cli/: Cargo.toml
peridot-cli/src/: commands.rs  curator.rs  direct_tools.rs  interactive_io.rs  main.rs  providers.rs  run_loop.rs  run_output.rs  run_state.rs  session_router.rs  tests.rs
peridot-cli/src/commands/: agents.rs  auth.rs  config.rs  doctor.rs  mcp.rs  project.rs  session.rs  settings.rs  setup.rs  skills.rs  tests.rs  update.rs  verify.rs
peridot-cli/tests/: e2e.rs
peridot-common/: Cargo.toml
peridot-common/src/: lib.rs
peridot-context/: Cargo.toml
peridot-context/src/: lib.rs
peridot-core/: Cargo.toml
peridot-core/src/: agent.rs  cancel.rs  complexity.rs  goal.rs  grader.rs  inner_loop.rs  intent.rs  lib.rs  permissions.rs  prompt.rs  recovery.rs  requests.rs  role.rs  slash.rs  state.rs  usage.rs
peridot-core/src/tests/: budget_recovery.rs  harness.rs  mod.rs  slash_prompt.rs  support.rs
peridot-git/: Cargo.toml
peridot-git/src/: lib.rs
peridot-grader/: Cargo.toml
peridot-grader/src/: lib.rs
peridot-llm/: Cargo.toml
peridot-llm/src/: anthropic.rs  catalog.rs  codex.rs  lib.rs  models.rs  openai.rs  openai_codex.rs  parse.rs  provider.rs  transport.rs  types.rs
peridot-mcp/: Cargo.toml
peridot-mcp/src/: client.rs  lib.rs  tests.rs
peridot-memory/: Cargo.toml
peridot-memory/src/: lib.rs
peridot-project/: Cargo.toml
peridot-project/src/: agents.rs  lib.rs  scanner.rs  tests.rs  types.rs
peridot-tools/: Cargo.toml
peridot-tools/src/: audit.rs  hooks.rs  lib.rs  mcp_adapter.rs  path.rs  registry.rs
peridot-tools/src/tests/: registry_file_plan.rs  shell_agent_memory.rs
peridot-tools/src/tools/: agent.rs  file.rs  git.rs  mod.rs  plan.rs  shell.rs  verify.rs  web.rs
peridot-tui/: Cargo.toml
peridot-tui/src/: ask_user.rs  at_picker.rs  blocks.rs  branch_picker.rs  diff_hunks.rs  fixtures.rs  i18n.rs  input.rs  lib.rs  render.rs  session_directory.rs  settings_screen.rs  slash_picker.rs  state.rs  terminal.rs  tests.rs
peridot-tui/src/mascot/: frames.rs  render.rs
peridot-verify/: Cargo.toml
peridot-verify/src/: lib.rs
(+178 files in other folders)
