[workspace]
members = [
    "crates/peridot-agents",
    "crates/peridot-cli",
    "crates/peridot-common",
    "crates/peridot-context",
    "crates/peridot-core",
    "crates/peridot-git",
    "crates/peridot-grader",
    "crates/peridot-llm",
    "crates/peridot-mcp",
    "crates/peridot-memory",
    "crates/peridot-project",
    "crates/peridot-tools",
    "crates/peridot-tui",
    "crates/peridot-verify",
]
resolver = "3"

[workspace.package]
version = "0.8.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/dlsxj101/peridot-agent"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
