[package]
name = "peridot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "peridot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
peridot-common = { path = "../peridot-common" }
peridot-context = { path = "../peridot-context" }
peridot-core = { path = "../peridot-core" }
peridot-llm = { path = "../peridot-llm" }
peridot-memory = { path = "../peridot-memory" }
peridot-project = { path = "../peridot-project" }
peridot-tools = { path = "../peridot-tools" }
serde_json.workspace = true
tokio.workspace = true
toml = "0.9.9"
