[package]
name = "peridot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "peridot"
path = "src/main.rs"

[features]
e2e = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
peridot-common = { path = "../peridot-common" }
peridot-context = { path = "../peridot-context" }
peridot-core = { path = "../peridot-core" }
peridot-llm = { path = "../peridot-llm" }
peridot-memory = { path = "../peridot-memory" }
peridot-mcp = { path = "../peridot-mcp" }
peridot-project = { path = "../peridot-project" }
peridot-git = { path = "../peridot-git" }
peridot-tools = { path = "../peridot-tools" }
peridot-verify = { path = "../peridot-verify" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml = "0.9.9"
base64 = "0.22.1"
sha2 = "0.11.0"
rand = "0.10.1"
peridot-tui = { version = "0.1.0", path = "../peridot-tui" }
