[package]
name = "peridot-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
e2e = []

[dependencies]
async-trait.workspace = true
peridot-common = { path = "../peridot-common" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
