[package]
name = "peridot-project"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
e2e = []

[dependencies]
peridot-common = { path = "../peridot-common" }
serde.workspace = true
serde_json.workspace = true
