[package]
name = "peridot-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
e2e = []

[dependencies]
async-trait.workspace = true
peridot-agents = { path = "../peridot-agents" }
peridot-common = { path = "../peridot-common" }
peridot-memory = { path = "../peridot-memory" }
peridot-mcp = { path = "../peridot-mcp" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
