[package]
name = "peridot-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
peridot-common = { path = "../peridot-common" }
peridot-core = { path = "../peridot-core" }
ratatui = "0.30.0"
serde.workspace = true
