[package]
name = "peridot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "peridot"
path = "src/main.rs"

[features]
e2e = []
# Surface a desktop notification when a background session asks for
# attention. Opt-in because it adds a system D-Bus / notification
# dependency on Linux.
os-notify = ["dep:notify-rust"]
# OCR text fallback for attached images on text-only models (F2 milestone 5).
# Opt-in because Tesseract is a native dependency (`libtesseract` +
# `libleptonica` must be installed to build/link).
ocr-tesseract = ["dep:leptess"]

[dependencies]
# Optional: only built when the `ocr-tesseract` feature is enabled.
leptess = { version = "0.14", optional = true }
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
peridot-common = { path = "../peridot-common" }
peridot-context = { path = "../peridot-context" }
peridot-core = { path = "../peridot-core" }
peridot-llm = { path = "../peridot-llm" }
peridot-memory = { path = "../peridot-memory" }
peridot-mcp = { path = "../peridot-mcp" }
peridot-project = { path = "../peridot-project" }
peridot-git = { path = "../peridot-git" }
peridot-tools = { path = "../peridot-tools" }
peridot-verify = { path = "../peridot-verify" }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
toml = "0.9.9"
base64 = "0.22.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
sha2 = "0.11.0"
rand = "0.10.1"
notify-rust = { version = "4", optional = true }
peridot-tui = { path = "../peridot-tui" }
