[package]
name = "peridot-context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
e2e = []

[dependencies]
peridot-common = { path = "../peridot-common" }
peridot-llm = { path = "../peridot-llm" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true
