[package]
name = "peridot-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
e2e = []

[dependencies]
peridot-common = { path = "../peridot-common" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
