[package]
name = "peridot-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
e2e = []

[dependencies]
peridot-common = { path = "../peridot-common" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
