[package]
name = "peridot-symbols"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-scala = "0.26"
tree-sitter-lua = "0.5"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-swift = "0.7.3"
tree-sitter-haskell = "0.23.1"
tree-sitter-elixir = "0.3.5"

[dev-dependencies]
serde_json.workspace = true
