[package]
name = "peridot-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
e2e = []

[dependencies]
async-trait.workspace = true
peridot-agents = { path = "../peridot-agents" }
peridot-common = { path = "../peridot-common" }
peridot-memory = { path = "../peridot-memory" }
peridot-mcp = { path = "../peridot-mcp" }
peridot-project = { path = "../peridot-project" }
peridot-symbols = { path = "../peridot-symbols" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dependencies.notify]
version = "8"
default-features = false
features = ["macos_fsevent"]
